--- a/ReposicionExamen2HowardJimenez/ReposicionExamen2HowardJimenez.csproj
+++ b/ReposicionExamen2HowardJimenez/ReposicionExamen2HowardJimenez.csproj
@@ -67,12 +67,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Facturacion.aspx" />
+    <Content Include="images\cable.jpg" />
+    <Content Include="images\Electric.jpg" />
     <Content Include="images\logo Muni.png" />
+    <Content Include="images\phone.jpg" />
+    <Content Include="images\Water.jpg" />
     <Content Include="Inicio.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
+    <Compile Include="Facturacion.aspx.cs">
+      <DependentUpon>Facturacion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Facturacion.aspx.designer.cs">
+      <DependentUpon>Facturacion.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
